--- a/src/resources/sass/partials/_variables.scss
+++ b/src/resources/sass/partials/_variables.scss
@@ -1,7 +1,6 @@
 // Body
-$body-bg: #fafafa;
+$body-bg: #fbfbfb;
 
 // Typography
-$font: 'Montserrat', sans-serif;
-$html-font-size: 62.5%;
-$base-font-size: 1.6rem;
+$font-family: 'Roboto', sans-serif;
+$base-font-size: 16px;
