--- a/src/resources/sass/partials/layout/_footer.scss
+++ b/src/resources/sass/partials/layout/_footer.scss
@@ -1,5 +1,5 @@
 // noinspection SassScssResolvedByNameOnly
 .footer {
-    padding: 2rem 0;
-    border-top: 1px solid $gray-200;
+    padding: 20px 0;
+    border-top: 1px solid $gray-300;
 }
