--- a/src/resources/sass/partials/layout/_header.scss
+++ b/src/resources/sass/partials/layout/_header.scss
@@ -1,20 +1,20 @@
 // noinspection SassScssResolvedByNameOnly
 .header {
-    border-bottom: 1px solid $gray-200;
+    border-bottom: 1px solid $gray-300;
 
     .nav-link {
-        padding: 2rem;
+        padding: 20px;
+        color: $gray-900;
 
-        &:not(:hover) {
-            color: $gray-900;
-
-            &.active {
-                color: $blue !important;
-            }
-        }
-
+        &.active,
         &:hover {
-            text-decoration: underline;
+            color: $blue;
+        }
+    }
+
+    .nav-item {
+        &:last-child .nav-link {
+            padding-right: 0;
         }
     }
 }
